--- a/PharmacyMap/app/src/main/res/values/strings.xml
+++ b/PharmacyMap/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">PharmacyMap</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_products">ProductsActivity</string>
 </resources>
